--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
                     <h1 class="main-header__title">Арт - пространство</h1>
                     <picture class="main-header__picture">
                         <img src="assets/images/lenni.png"
-                             class="main-header__img" />
+                            class="main-header__img" />
                     </picture>
                     <p class="main-header__text">
                         для людей, горящих сердцем и делом 
@@ -20,10 +20,10 @@
                 </header>
 
                 <section class="offers home__offers"></section>
-                <section class="about home__about"></section>
+                @@include("blocks/about.html", {class: 'home__about'})
                 <section class=" upcoming home__upcoming"></section>
                 <section class="listing home__listing"></section>
-                <section class="contacts home__contacts"></section>
+                @@include("blocks/contacts.html", {class: 'home__contacts'})
 
                 <div class="doit home__doit"></div>
             </div>
