--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -7,17 +7,17 @@
   </div>
   <div class="about__block2">
     <picture class="about__picture">
-      <img class="about__img" src="assets/images/about1.jpg"/>
+      <img class="about__img" src="assets/images/about1.jpg" alt="about1"/>
     </picture>
     <picture class="about__picture2">
-      <img class="about__img" src="assets/images/about2.jpg"/>
+      <img class="about__img" src="assets/images/about2.jpg" alt="about2"/>
     </picture>
     <h3 class="about__title about__title--w868 about__title--2">Мы предоставляем площади для вашего мероприятия</h3>
     <p class="about__text about__text--2">И оказываем помощь с организацией, если вам это нужно. Наша цель: вовлечь в культурную жизнь города как можно больше людей, помочь молодым ребятам сделать первые шаги к своей мечте и рассказать всем о том, что их волнует.</p>
   </div>
   <div class="about__block3">
     <picture class="about__picture3">
-      <img class="about__img2" src="assets/images/about3.jpg"/>
+      <img class="about__img2" src="assets/images/about3.jpg" alt="about3"/>
     </picture>
     <div class="about__block3-wrapper">
       <p class="about__text about__text--mb90">
@@ -28,7 +28,7 @@
         <svg class="link__icon"
             width="91"
             height="60">
-        <use xlink:href="assets\icons\symbols.svg#link">
+        <use xlink:href="assets\icons\symbols.svg#link"></use>
         </svg>
       </a>
     </div>
