--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -30,14 +30,14 @@
     <h4 class="page-footer__copyright">© Millennials 2022</h4>
 
     <div class="page-footer__other">
-      <h4 class="page-footer__other-policy">Политика конфиденциальности</h4>
-      <h4 class="page-footer__other-cookies">Cookies</h4>
+        <h4 class="page-footer__other-policy">Политика конфиденциальности</h4>
+        <h4 class="page-footer__other-cookies">Cookies</h4>
       <div class="page-footer__other-media">
         <picture class="page-footer__other-inst">
-          <img class="page-footer__other-inst-img" alt="inst" src="assets\images\insta.png">
+          <img class="page-footer__other-inst-img" alt="inst" src="assets/images/insta.png">
         </picture>
         <picture class="page-footer__other-vk">
-          <img class="page-footer__other-vk-img" alt="vk" src="assets\images\vk.png">
+          <img class="page-footer__other-vk-img" alt="vk" src="assets/images/vk.png">
         </picture>
       </div>
       
@@ -46,7 +46,7 @@
         <svg class="page-footer__other-promote-icon"
           width="56"
           height="17">
-          <use xlink:href="assets\icons\symbols.svg#tagree">
+          <use xlink:href="assets\icons\symbols.svg#tagree"></use>
         </svg>
       </div>
     </div>
