--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
                     <h1 class="main-header__title">Арт - пространство</h1>
                     <picture class="main-header__picture">
                         <img src="assets/images/lenni.png"
-                            class="main-header__img" />
+                            class="main-header__img" alt="main-header"/>
                     </picture>
                     <p class="main-header__text">
                         для людей, горящих сердцЕМ и делом место для настоящего
