--- a/src/html/blocks/contacts.html
+++ b/src/html/blocks/contacts.html
@@ -10,7 +10,7 @@
             <svg class="contacts-item__icon"
             width="24"
             height="24">
-            <use xlink:href="assets\icons\symbols.svg#location">
+            <use xlink:href="assets\icons\symbols.svg#location"></use>
             </svg>
           </div>
           <div class="contacts-item__content">
@@ -25,7 +25,7 @@
             <svg class="contacts-item__icon"
             width="24"
             height="24">
-            <use xlink:href="assets\icons\symbols.svg#home">
+            <use xlink:href="assets\icons\symbols.svg#home"></use>
             </svg>
           </div>
           <div class="contacts-item__content">
@@ -40,7 +40,7 @@
             <svg class="contacts-item__icon"
             width="24"
             height="24">
-            <use xlink:href="assets\icons\symbols.svg#star">
+            <use xlink:href="assets\icons\symbols.svg#star"></use>
             </svg>
           </div>
           <div class="contacts-item__content">
