--- a/src/html/blocks/info.html
+++ b/src/html/blocks/info.html
@@ -7,7 +7,7 @@
             <svg class="info-item__icon"
             width="24"
             height="24">
-            <use xlink:href="assets\icons\symbols.svg#information">
+            <use xlink:href="assets\icons\symbols.svg#information"></use>
             </svg>
           </div>
           <div class="info-item__content">
@@ -23,7 +23,7 @@
             <svg class="info-item__icon"
             width="24"
             height="24">
-            <use xlink:href="assets\icons\symbols.svg#contact">
+            <use xlink:href="assets\icons\symbols.svg#contact"></use>
             </svg>
           </div>
           <div class="info-item__content">
@@ -39,7 +39,7 @@
             <svg class="info-item__icon"
             width="24"
             height="24">
-            <use xlink:href="assets\icons\symbols.svg#handshake">
+            <use xlink:href="assets\icons\symbols.svg#handshake"></use>
             </svg>
           </div>
           <div class="info-item__content">
