--- a/src/html/events.html
+++ b/src/html/events.html
@@ -77,7 +77,7 @@
                             <svg class="link__icon link__icon--events"
                             width="100"
                             height="80">
-                                <use xlink:href="assets\icons\symbols.svg#arrow_down">
+                                <use xlink:href="assets\icons\symbols.svg#arrow_down"></use>
                             </svg>
                         </div>
 
