fin with no errors

--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -30,8 +30,8 @@
     <h4 class="page-footer__copyright">© Millennials 2022</h4>
 
     <div class="page-footer__other">
-        <h4 class="page-footer__other-policy">Политика конфиденциальности</h4>
-        <h4 class="page-footer__other-cookies">Cookies</h4>
+        <a href="#" class="page-footer__other-policy link">Политика конфиденциальности</a>
+        <a href="#" class="page-footer__other-cookies link">Cookies</a>
       <div class="page-footer__other-media">
         <picture class="page-footer__other-inst">
           <img class="page-footer__other-inst-img" alt="inst" src="assets/images/insta.png">
@@ -42,14 +42,17 @@
       </div>
       
       <div class="page-footer__other-promote">
-        <h4 class="page-footer__other-promote-title">Создание и продвижение</h4>
+        <a href="#" class="page-footer__other-promote-link link">
+        <p class="page-footer__other-promote-title">Создание и продвижение</p>
         <svg class="page-footer__other-promote-icon"
           width="56"
           height="17">
           <use xlink:href="assets\icons\symbols.svg#tagree"></use>
         </svg>
+      </a>
       </div>
     </div>
+
   </div>
 
 </footer>
